Fix extra space in messages

--- a/static/scss/chat.scss
+++ b/static/scss/chat.scss
@@ -122,8 +122,6 @@
         border-radius: 7px;
         background: var(--color-light-gray);
         margin: 0 0 3px 0;
-        word-break: break-word;
-        white-space: pre-line;
         line-height: 1.1rem;
         font-size: 14px;
       }
